# ChangeLog for media-libs/fontconfig
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.134 2009/08/16 21:38:44 dirtyepic Exp $

*fontconfig-2.7.1 (16 Aug 2009)

  16 Aug 2009; Ryan Hill <dirtyepic@gentoo.org> -fontconfig-2.4.2.ebuild,
  +fontconfig-2.7.1.ebuild, +files/fontconfig-2.7.1-latin-reorder.patch:
  Version bump. Remove old.

*fontconfig-2.7.0 (12 Jul 2009)

  12 Jul 2009; Ryan Hill <dirtyepic@gentoo.org> +fontconfig-2.7.0.ebuild,
  +files/fontconfig-2.7.0-latin-reorder.patch:
  Version bump.

  - Tweak order of preference for latin fonts (bug 130466)

  - Don't overwrite user settings on every reinstall (bug 193476)

  07 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  fontconfig-2.6.0-r2.ebuild:
  Migrate to EAPI 2. Fixes bug #261600.

  05 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  fontconfig-2.6.0-r2.ebuild:
  Bump freetype requirement to 2.2.1, since FT_Select_Size was added then.

  09 Nov 2008; <solar@gentoo.org> fontconfig-2.6.0-r2.ebuild:
  - make sure ebuild uses myconf as a local variable

  02 Oct 2008; Brent Baude <ranger@gentoo.org> fontconfig-2.6.0-r2.ebuild:
  stable ppc, bug 238908

  02 Oct 2008; Peter Alfredsen <loki_val@gentoo.org>
  fontconfig-2.6.0-r2.ebuild:
  Because opfer was so thoughtful as to change the name of a useflag on
  stable package, people who had built docbook-sgml-utils before September
  2nd would have built it with tetex to get docbook2pdf. This changes the
  built_with_use logic to take that into consideration.

  01 Oct 2008; Peter Alfredsen <loki_val@gentoo.org>
  ChangeLog, fontconfig-2.6.0-r2.ebuild:
  Fix emerge failure reported in bug 238908. We need to depend on the right
  DTD when building sgml docs and docbook-sgml-utils must be built with
  jadetex so we can have docbook2pdf. Incidentally, we get a false QA
  failure where the build system runs ../missing --run, which looks like