@@ -13,13 +13,14 @@ DIST fontconfig-2.7.1.tar.gz 1539165 RMD160 34e0f6348486ab5304d6ecee4fe33f932689
 EBUILD fontconfig-2.5.0-r1.ebuild 2505 RMD160 e65b8588e50e6f56ddaebbe9e75f0600e18e98a9 SHA1 55f256b214f5d2bef1d78ef61a747d61b6f77266 SHA256 2b6ecdb834a51f4ef21dd265127e82eb60474edc1dc83dceec4f1c987b64c5b5
 EBUILD fontconfig-2.6.0-r2.ebuild 3072 RMD160 ff75040246af7d5c8c3a2db06f3689f618b5d2ba SHA1 355eb651ef6f2bdbaf124bbd48d3f189dbe0c93e SHA256 e87ec59e7f72a8d4627f36c273c2275c6a5819e3cd242ab37c56f1b26d5cb5c7
 EBUILD fontconfig-2.7.0.ebuild 3993 RMD160 1570493ae5c7128e7fee71921932d8002137e4f6 SHA1 61279ec000cd21f0cf6e5cd5b45984624d47328d SHA256 46f708f6accc5e65be9c08a1b8c616997cf01eb79e129668750b8ad6adbaf1a7
+EBUILD fontconfig-2.7.1-r1.ebuild 4158 RMD160 31a87bd201911226c128949ced41f50b7cc70f55 SHA1 09ee71793677e90a8c6fd230d1d114e5c861e730 SHA256 cc413043c40065b358d8324f9d20bd123fd8fc9614b8f5916c18ba315986780a
 EBUILD fontconfig-2.7.1.ebuild 3984 RMD160 50f799e6690d00b67d06d877ff8be4ffd8c08597 SHA1 28d8ac182b0e77cb77cfb221cecac1ec22784510 SHA256 c3a91c020de92c1f065c1a74fb6d1b94d5afa14960decd7e1484e62cf97d1279
-MISC ChangeLog 21256 RMD160 e1828f1195840750f890e48864282c23fb723a84 SHA1 9ca524545b6a86d2101b245514b4884788cfe24a SHA256 16426edf177264bb0817c8b2f64c3d67d457343b8a2090793c01f5eb08a74744
+MISC ChangeLog 21480 RMD160 d21a8aafecd4d703c3f41309d91eccbf308ad671 SHA1 83e4b07bdb8dac342fd323ea0064ce00a81667b8 SHA256 9ba26c870cae9ecfa0948b6f740f774b4bff0f5656ee69c3389d8e0c21c854d8
 MISC metadata.xml 419 RMD160 898b8233ab233060d8137dadf28c291b83a65500 SHA1 ee62c352812f8765122e5a65b7df5f8794c6c485 SHA256 859faa6fc0c008e92a6432f0fd50a760170d724b15997e557d5d73088277c4db
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkqIfJYACgkQiqiDRvmkBmJUMACfdY1uOJ/MDT+wnSaIv/3CTvRt
-GD4AoJuvlH4zGfsHqjXWR/AreTiAEWwf
-=9gBv
+iEYEARECAAYFAkqRx2QACgkQiqiDRvmkBmJDaACeIZw3wn0lrZ4dB0QjFGexOjZy
+rl8An1RR/onmoucnLUO3a8Qj+Dbat8Ku
+=h7wE
 -----END PGP SIGNATURE-----
