@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/fontconfig
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.134 2009/08/16 21:38:44 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.135 2009/08/23 22:48:21 dirtyepic Exp $
+
+*fontconfig-2.7.1-r1 (23 Aug 2009)
+
+  23 Aug 2009; Ryan Hill <dirtyepic@gentoo.org> +fontconfig-2.7.1-r1.ebuild:
+  Fix sandbox violations on /var/cache/fontconfig. Bug #278221, #282021,
+  #282402, and I'm sure many others.
 
 *fontconfig-2.7.1 (16 Aug 2009)
 
